--- a/Database2FinalProject/pom.xml
+++ b/Database2FinalProject/pom.xml
@@ -32,5 +32,10 @@
             <artifactId>struts2-core</artifactId>
             <version>2.5.28</version>
         </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 </project>
